premise-core/tests/snapshots/ir_snapshots__01_entity_definitions.snap
---
source: premise-core/tests/ir_snapshots.rs
expression: analysis
---
{
  "ir": {
    "story": {
      "acts": [],
      "scenes": [],
      "cels": []
    },
    "adapters": []
  },
  "diagnostics": []
}
