premise-core/tests/snapshots/ir_snapshots__05_imports_and_metadata.snap
---
source: premise-core/tests/ir_snapshots.rs
expression: analysis
---
{
  "ir": {
    "story": {
      "acts": [],
      "scenes": [],
      "cels": []
    },
    "adapters": [
      {
        "name_or_path": "custom_adapter.yaml",
        "range": {
          "start": {
            "row": 2,
            "column": 10
          },
          "end": {
            "row": 2,
            "column": 29
          },
          "start_byte": 94,
          "end_byte": 113
        }
      }
    ]
  },
  "diagnostics": []
}
