premise-core/tests/snapshots/ir_snapshots__07_full_example.snap
---
source: premise-core/tests/ir_snapshots.rs
expression: analysis
---
{
  "ir": {
    "story": {
      "acts": [
        {
          "title": "",
          "proportion": null,
          "range": {
            "start": {
              "row": 5,
              "column": 0
            },
            "end": {
              "row": 5,
              "column": 9
            },
            "start_byte": 92,
            "end_byte": 101
          }
        }
      ],
      "scenes": [
        {
          "title": "",
          "proportion": null,
          "range": {
            "start": {
              "row": 6,
              "column": 0
            },
            "end": {
              "row": 6,
              "column": 12
            },
            "start_byte": 102,
            "end_byte": 114
          }
        }
      ],
      "cels": [
        {
          "title": "",
          "location_type": null,
          "time": null,
          "proportion": null,
          "range": {
            "start": {
              "row": 7,
              "column": 0
            },
            "end": {
              "row": 7,
              "column": 12
            },
            "start_byte": 115,
            "end_byte": 127
          }
        }
      ]
    },
    "adapters": []
  },
  "diagnostics": []
}
