premise-core/tests/snapshots/ir_snapshots__09_adapters_and_block_scalars.snap
---
source: premise-core/tests/ir_snapshots.rs
expression: analysis
---
{
  "ir": {
    "story": {
      "acts": [],
      "scenes": [],
      "cels": []
    },
    "adapters": [
      {
        "name_or_path": "adapters/text_enhancement.yaml",
        "range": {
          "start": {
            "row": 3,
            "column": 10
          },
          "end": {
            "row": 3,
            "column": 40
          },
          "start_byte": 84,
          "end_byte": 114
        }
      },
      {
        "name_or_path": "adapters/post_processing.yaml",
        "range": {
          "start": {
            "row": 6,
            "column": 10
          },
          "end": {
            "row": 6,
            "column": 39
          },
          "start_byte": 182,
          "end_byte": 211
        }
      }
    ]
  },
  "diagnostics": []
}
