premise-core/tests/snapshots/ir_snapshots__13_world_qualified_refs.snap
---
source: premise-core/tests/ir_snapshots.rs
expression: analysis
---
{
  "ir": {
    "story": {
      "acts": [
        {
          "title": "",
          "proportion": null,
          "range": {
            "start": {
              "row": 8,
              "column": 0
            },
            "end": {
              "row": 8,
              "column": 9
            },
            "start_byte": 429,
            "end_byte": 438
          }
        }
      ],
      "scenes": [
        {
          "title": "",
          "proportion": null,
          "range": {
            "start": {
              "row": 10,
              "column": 0
            },
            "end": {
              "row": 10,
              "column": 10
            },
            "start_byte": 440,
            "end_byte": 450
          }
        }
      ],
      "cels": [
        {
          "title": "",
          "location_type": null,
          "time": null,
          "proportion": null,
          "range": {
            "start": {
              "row": 12,
              "column": 0
            },
            "end": {
              "row": 12,
              "column": 24
            },
            "start_byte": 452,
            "end_byte": 476
          }
        }
      ]
    },
    "adapters": []
  },
  "diagnostics": []
}
